--- a/app/src/main/res/layout/fragment_business.xml
+++ b/app/src/main/res/layout/fragment_business.xml
@@ -29,7 +29,7 @@
         <com.sendi.deliveredrobot.view.widget.MyGridView
             android:id="@+id/businessGv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_30"
             android:layout_marginTop="@dimen/dp_140"
             android:layout_marginEnd="@dimen/dp_30"
