--- a/app/src/main/res/layout/fragment_businessing.xml
+++ b/app/src/main/res/layout/fragment_businessing.xml
@@ -13,6 +13,54 @@
         android:background="@drawable/bg_business"
         android:layout_height="match_parent">
 
+        <com.sendi.deliveredrobot.view.widget.AdvanceView
+            android:id="@+id/pointImage"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/horizontalTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_32"
+            android:layout_marginEnd="@dimen/dp_32"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!--80大 60中 40小 -->
+        <com.sendi.deliveredrobot.view.widget.VerticalTextView
+            android:id="@+id/verticalTV"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/dp_32"
+            android:layout_marginEnd="@dimen/dp_32"
+            app:columnLength="8"
+            app:isCharCenter="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:textSize="30sp" />
+
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/pauseCon"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_img_halo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
         <TextView
             android:id="@+id/business_name"
             android:layout_width="wrap_content"
@@ -25,6 +73,69 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="@string/business_going"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/motionLayoutGuideArrive"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg"
+            android:visibility="gone"
+            app:layoutDescription="@xml/fragment_guide_arrive_scene"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:context=".view.fragment.GuideArriveFragment">
+
+
+            <LinearLayout
+                android:id="@+id/lin"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/motionLayoutGuideArrive"
+                app:layout_constraintTop_toTopOf="@+id/motionLayoutGuideArrive"
+                app:layout_constraintVertical_bias="0.0">
+
+                <TextView
+                    android:id="@+id/array_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_128"
+                    android:gravity="center"
+                    android:text="任务结束"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_48" />
+
+                <TextView
+                    android:id="@+id/bottomAlarmTextViewArrive"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.6"
+                    android:gravity="center"
+                    android:text="@string/Sendi"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_32" />
+
+                <ImageView
+                    android:id="@+id/imgArrive"
+                    android:layout_width="800dp"
+                    android:layout_height="@dimen/dp_400"
+                    android:layout_gravity="center"
+                    android:contentDescription="@string/image_description"
+                    app:layout_constraintBottom_toBottomOf="@+id/lin"
+                    app:layout_constraintEnd_toEndOf="@id/motionLayoutGuideArrive"
+                    app:layout_constraintStart_toStartOf="@id/motionLayoutGuideArrive"
+                    app:layout_constraintTop_toTopOf="@id/motionLayoutGuideArrive"
+                    tools:src="@drawable/img_arrive" />
+
+            </LinearLayout>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
