1、升级版本号为1.1.0 2、将“小翼”改成“小迪” 3、机器人配置中添加“唤醒词”查询 4、添加数据库的默认值 5、补充基础设置中未提交成功的代码（导致导购点击无效） 6、主页面收到导购配置之后，名称实时更新

--- a/app/src/main/res/layout/fragment_about_me_setting.xml
+++ b/app/src/main/res/layout/fragment_about_me_setting.xml
@@ -244,7 +244,7 @@
                 <View
                     android:id="@+id/view12"
                     android:layout_width="@dimen/dp_1010"
-                    android:layout_height="@dimen/dp_218"
+                    android:layout_height="@dimen/dp_118"
                     android:layout_marginTop="@dimen/dp_22"
                     android:background="@drawable/setting_item_bg"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -284,6 +284,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_63"
                     android:alpha="0.6"
+                    android:visibility="gone"
                     android:text="@string/diagnosis"
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp_28"
@@ -296,6 +297,7 @@
                     android:background="@drawable/btn_bg"
                     android:text="@string/Upload_log"
                     android:textSize="@dimen/sp_24"
+                    android:visibility="gone"
                     android:gravity="center"
                     android:layout_marginEnd="@dimen/dp_32"
                     android:textColor="@color/color_00EEFF"
