--- a/app/src/main/res/layout/guide_select_item.xml
+++ b/app/src/main/res/layout/guide_select_item.xml
@@ -20,6 +20,7 @@
             android:layout_width="@dimen/dp_248"
             android:layout_height="@dimen/dp_200"
             tools:src="@tools:sample/avatars"
+            android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +32,7 @@
             android:background="@drawable/guide_select_tv_bg"
             android:gravity="center"
             android:text="@string/name"
-            android:textColor="@color/white"
+            android:textColor="@drawable/text_select_bg"
             android:textSize="@dimen/sp_28"
             app:layout_constraintBottom_toBottomOf="@+id/ivGuideRound"
             app:layout_constraintEnd_toEndOf="@+id/ivGuideRound"
