--- a/app/src/main/res/layout/fragment_guide.xml
+++ b/app/src/main/res/layout/fragment_guide.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="wakeUpName"
+            type="com.sendi.deliveredrobot.entity.entitySql.QuerySql" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -105,19 +107,35 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/bubbleTv"
-            android:layout_width="@dimen/dp_320"
-            android:layout_height="@dimen/dp_40"
-            android:layout_marginStart="@dimen/dp_14"
-            android:alpha="0.6"
-            android:background="@drawable/rectangle"
-            android:gravity="center"
-            android:text="@string/ask"
-            android:textColor="@color/white"
-            android:textSize="@dimen/sp_24"
-            app:layout_constraintBottom_toBottomOf="@+id/microphone"
-            app:layout_constraintStart_toEndOf="@+id/microphone" />
+            <TextView
+                android:id="@+id/bubbleTv"
+                android:text="@{@string/ask(wakeUpName.robotConfig().wakeUpWord)}"
+                android:textColor="@color/white"
+                android:textStyle="normal"
+                android:alpha="0.7"
+                android:layout_marginStart="@dimen/dp_14"
+                android:textSize="@dimen/sp_24"
+                android:gravity="center"
+                android:shadowColor="@color/red"
+                android:shadowRadius="10.0"
+                android:shadowDx="50.0"
+                android:shadowDy="30.0"
+                android:singleLine="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:ellipsize="marquee"
+                android:clickable="true"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:layout_width="@dimen/dp_320"
+                android:layout_height="wrap_content"
+                tools:text="@string/ask"
+                android:background="@drawable/rectangle"
+                app:layout_constraintBottom_toBottomOf="@+id/microphone"
+                app:layout_constraintStart_toEndOf="@+id/microphone" >
+                <requestFocus />
+            </TextView>
+
+<!--    </TextView>-->
 
         <ImageView
             android:layout_width="@dimen/dp_6"
