--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="wakeUpName"
+            type="com.sendi.deliveredrobot.entity.entitySql.QuerySql" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -109,17 +111,31 @@
 
         <TextView
             android:id="@+id/textView61"
-            android:layout_width="@dimen/dp_320"
-            android:layout_height="@dimen/dp_40"
-            android:layout_marginStart="@dimen/dp_14"
-            android:alpha="0.6"
-            android:background="@drawable/rectangle"
-            android:gravity="center"
-            android:text="@string/ask"
+            android:text="@{@string/ask(wakeUpName.robotConfig().wakeUpWord)}"
             android:textColor="@color/white"
+            android:textStyle="normal"
+            android:alpha="0.7"
+            android:layout_marginStart="@dimen/dp_14"
             android:textSize="@dimen/sp_24"
+            android:gravity="center"
+            android:shadowColor="@color/red"
+            android:shadowRadius="10.0"
+            android:shadowDx="50.0"
+            android:shadowDy="30.0"
+            android:singleLine="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:ellipsize="marquee"
+            android:clickable="true"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:layout_width="@dimen/dp_320"
+            android:layout_height="wrap_content"
+            tools:text="@string/ask"
+            android:background="@drawable/rectangle"
             app:layout_constraintBottom_toBottomOf="@+id/imageView8"
-            app:layout_constraintStart_toEndOf="@+id/imageView8" />
+            app:layout_constraintStart_toEndOf="@+id/imageView8" >
+            <requestFocus />
+        </TextView>
 
         <ImageView
             android:layout_width="@dimen/dp_6"
