1、修改引领、讲解列表空指针问题 2、引领获取配置的时候添加删除功能 3、添加引领大屏幕默认图片 4、修改待命点和充电点查询的SQL 5、去除地盘日志上报 6、任务开始时添加充电点和待命点检查

--- a/app/src/main/res/layout/fragment_businessing.xml
+++ b/app/src/main/res/layout/fragment_businessing.xml
@@ -73,6 +73,14 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="@string/business_going"/>
 
+        <ImageView
+            android:id="@+id/argPic"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/motionLayoutGuideArrive"
             android:layout_width="match_parent"
@@ -124,12 +132,13 @@
                     android:layout_width="800dp"
                     android:layout_height="@dimen/dp_400"
                     android:layout_gravity="center"
+                    android:background="@drawable/img_arrive"
                     android:contentDescription="@string/image_description"
                     app:layout_constraintBottom_toBottomOf="@+id/lin"
                     app:layout_constraintEnd_toEndOf="@id/motionLayoutGuideArrive"
                     app:layout_constraintStart_toStartOf="@id/motionLayoutGuideArrive"
                     app:layout_constraintTop_toTopOf="@id/motionLayoutGuideArrive"
-                    tools:src="@drawable/img_arrive" />
+                   />
 
             </LinearLayout>
 
