--- a/app/src/main/res/layout/dialog_wifi_password.xml
+++ b/app/src/main/res/layout/dialog_wifi_password.xml
@@ -6,120 +6,71 @@
     android:layout_height="match_parent"
     >
 
+
     <View
         android:id="@+id/view17"
         android:layout_width="640dp"
         android:layout_height="302.8dp"
-        android:background="@drawable/shape_solid_f6f6f6_corners_20dp"
+        android:background="@drawable/setting_item_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline139"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline139"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.21" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline144"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.1" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline140"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.25" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline141"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.31" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline142"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.44" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="472dp"
         android:textColor="@color/color_4D6FBE"
+        android:layout_marginTop="@dimen/dp_32"
         android:textSize="@dimen/small_small_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/view17"
         app:layout_constraintStart_toStartOf="@+id/view17"
-        app:layout_constraintTop_toTopOf="@+id/guideline140"
-        app:layout_constraintVertical_bias="0.0"
-        tools:text='连接Wifi网络"Sendi-wifi"需要输入密码：' />
+        app:layout_constraintTop_toTopOf="@+id/view17"
+        tools:text='连接网络"Sendi-wifi"需要输入密码：' />
 
     <EditText
         android:id="@+id/editTextWifiPassword"
         android:layout_width="560dp"
         android:layout_height="80dp"
-        android:background="@drawable/shape_solid_00114e_corners_10dp"
+        android:layout_marginBottom="360dp"
+        android:autofillHints="@string/please_input_password_chinese"
+        android:background="@drawable/selector_edt_bg"
         android:hint="@string/please_input_password_chinese"
+        android:imeOptions="actionDone"
+        android:inputType="textPassword"
+        android:paddingStart="21dp"
+        android:singleLine="true"
+        android:layout_marginTop="@dimen/dp_32"
         android:textColorHint="@color/color_A0BAEF"
         android:textSize="@dimen/small_small_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/view17"
         app:layout_constraintStart_toStartOf="@+id/view17"
-        app:layout_constraintTop_toTopOf="@+id/guideline141"
-        app:layout_constraintVertical_bias="0.0"
-        android:paddingStart="21dp"
-        android:paddingEnd="0dp"
-        android:inputType="textPassword"
-        android:autofillHints="@string/please_input_password_chinese"
-        android:singleLine="true"
-        android:imeOptions="actionDone"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
+
 
     <TextView
         android:id="@+id/textViewWifiCommit"
-        android:layout_width="560dp"
-        android:layout_height="80dp"
-        android:background="@drawable/selector_bg2_button"
+        android:layout_width="@dimen/dp_204"
+        android:layout_height="@dimen/dp_72"
+        android:background="@drawable/dialog_btn_true_bg"
         android:gravity="center"
         android:text="@string/join"
         android:textColor="@color/white"
         android:textSize="@dimen/mid_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="@dimen/dp_24"
         app:layout_constraintEnd_toEndOf="@+id/view17"
         app:layout_constraintStart_toStartOf="@+id/view17"
-        app:layout_constraintTop_toTopOf="@+id/guideline142"
-        app:layout_constraintVertical_bias="0.0"
-        android:letterSpacing="0.1"
+        app:layout_constraintTop_toBottomOf="@+id/editTextWifiPassword"
         tools:targetApi="lollipop" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline143"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.7109" />
 
     <ImageView
         android:id="@+id/imageViewDialogCancel"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:contentDescription="@string/image_description"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline143"
-        app:layout_constraintTop_toTopOf="@+id/guideline144"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintEnd_toEndOf="@+id/view17"
+        app:layout_constraintTop_toTopOf="@+id/view17"
         app:srcCompat="@drawable/ic_square_clear" />
 </androidx.constraintlayout.widget.ConstraintLayout>
