--- a/app/src/main/res/layout/fragment_business.xml
+++ b/app/src/main/res/layout/fragment_business.xml
@@ -33,7 +33,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_30"
-            android:layout_marginTop="@dimen/dp_150"
             android:layout_marginEnd="@dimen/dp_30"
             android:layout_marginBottom="@dimen/dp_120"
             android:horizontalSpacing="@dimen/dp_22"
@@ -42,7 +41,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/businessName" />
 
         <LinearLayout
             android:id="@+id/ll_return"
