添加功能页面的标题刷新

--- a/app/src/main/res/layout/fragment_guide.xml
+++ b/app/src/main/res/layout/fragment_guide.xml
@@ -22,6 +22,7 @@
             android:layout_marginTop="@dimen/dp_64"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_40"
+            android:text="@string/Intelligent_leadership"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
