1、修改默认图片 2、导购配置上报时添加绑定的总图名字 3、修改广告配置和机器人配置下载的方法 4、修改围堵页面的显示 5、添加更新配置、地图时的弹窗 6、去掉建图时电梯的获取 7、修改每个版本都展现了一种新风貌的广告屏样式

--- a/app/src/main/res/layout/dialog_robot_self_check_hint.xml
+++ b/app/src/main/res/layout/dialog_robot_self_check_hint.xml
@@ -133,7 +133,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:includeFontPadding="false"
-        android:text="错误编码：0347886124"
+        android:text="编码：0347886124"
         android:textColor="@color/color_4D6FBE"
         android:textSize="@dimen/small_text_size"
         app:layout_constraintEnd_toEndOf="@+id/confirm_btn"
