--- a/app/src/main/res/layout/presentation_content.xml
+++ b/app/src/main/res/layout/presentation_content.xml
@@ -38,7 +38,7 @@
             <TextView
                 android:id="@+id/horizontalTV"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dp_30"
                 android:layout_marginTop="@dimen/dp_30"
                 android:layout_marginEnd="@dimen/dp_30"
