--- a/app/src/main/res/layout/dialog_robot_updata.xml
+++ b/app/src/main/res/layout/dialog_robot_updata.xml
@@ -2,19 +2,40 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/img_goback"
     android:gravity="center"
-    android:orientation="vertical"
-    android:background="@drawable/img_goback">
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="@dimen/dp_436"
         android:layout_height="@dimen/dp_436"
-        android:src="@drawable/robot_updata"/>
+        android:src="@drawable/robot_updata" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/robot_updata_tips"
         android:textColor="@color/white"
-        android:textSize="@dimen/sp_36"
-        android:text="@string/robot_updata_tips"/>
+        android:textSize="@dimen/sp_36" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="455dp"
+        android:layout_height="@dimen/dp_15"
+        android:layout_marginStart="@dimen/dp_12"
+        android:layout_marginTop="@dimen/dp_38"
+        android:max="100"
+        android:progress="0"
+        android:progressDrawable="@drawable/progressbar_qr" />
+
+    <TextView
+        android:id="@+id/task_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_20"
+        android:text="@string/download_progress"
+        android:textColor="@color/white"
+        android:textSize="@dimen/sp_18" />
 
 </LinearLayout>
