--- a/app/src/main/res/drawable/progressbar_qr.xml
+++ b/app/src/main/res/drawable/progressbar_qr.xml
@@ -1,25 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<!-- 设置ProgressBar背景色 -->
-<item android:id="@android:id/background">
-    <inset android:insetLeft="0dp" android:insetTop="0dp" android:insetRight="0dp" android:insetBottom="0dp">
+    <item>
         <shape>
-            <!-- 设置ProgressBar背景圆角半径 -->
-            <corners android:radius="@dimen/dp_8" />
-            <solid android:color="@color/color_6787D4" />
+            <corners android:radius="@dimen/dp_12" />
+            <solid android:color="@color/color_260C7B" />
         </shape>
-    </inset>
-</item>
-
-<!-- 设置ProgressBar进度条颜色 -->
-<item android:id="@android:id/progress">
-    <clip android:clipOrientation="horizontal">
-        <inset android:insetLeft="4dp" android:insetTop="4dp" android:insetRight="4dp" android:insetBottom="4dp">
+    </item>
+    <item>
+        <scale android:scaleWidth="100%">
             <shape>
-                <!-- 设置ProgressBar进度条圆角半径 -->
-                <corners android:radius="@dimen/dp_8" />
-                <solid android:color="@color/color_47D7FA" />
+                <corners android:radius="@dimen/dp_12" />
+                <solid android:color="@color/color_00EEFF" />
             </shape>
-        </inset>
-    </clip>
-</item>
+        </scale>
+    </item>
 </layer-list>
