--- a/app/src/main/res/layout/dialog_robot_updata.xml
+++ b/app/src/main/res/layout/dialog_robot_updata.xml
@@ -1,41 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/img_goback"
     android:gravity="center"
     android:orientation="vertical">
 
+
+    <View
+        android:id="@+id/view34"
+        android:layout_width="540dp"
+        android:layout_height="@dimen/dp_332"
+        android:background="@drawable/shape_gradient_1a4fba_0e40a4_corners_10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
-        android:layout_width="@dimen/dp_436"
-        android:layout_height="@dimen/dp_436"
-        android:src="@drawable/robot_updata" />
+        android:id="@+id/imageView19"
+        android:layout_width="@dimen/dp_0"
+        android:layout_height="@dimen/dp_164"
+        android:background="@drawable/download_dialog_bg"
+        app:layout_constraintEnd_toEndOf="@+id/view34"
+        app:layout_constraintStart_toStartOf="@+id/view34"
+        app:layout_constraintTop_toTopOf="@+id/view34" />
+
+
+    <ImageView
+        android:id="@+id/imageView18"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_224"
+        android:src="@drawable/robot_updata"
+        android:layout_marginBottom="@dimen/dp_42"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView19"
+        app:layout_constraintEnd_toEndOf="@+id/imageView19"
+        app:layout_constraintStart_toStartOf="@+id/imageView19" />
+
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/robot_updata_tips"
         android:textColor="@color/white"
-        android:textSize="@dimen/sp_36" />
+        android:textSize="@dimen/sp_36"
+        app:layout_constraintEnd_toEndOf="@+id/view34"
+        app:layout_constraintStart_toStartOf="@+id/view34"
+        app:layout_constraintTop_toBottomOf="@+id/imageView18" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_width="455dp"
+        android:layout_width="@dimen/dp_320"
         android:layout_height="@dimen/dp_15"
-        android:layout_marginStart="@dimen/dp_12"
-        android:layout_marginTop="@dimen/dp_38"
         android:max="100"
         android:progress="0"
-        android:progressDrawable="@drawable/progressbar_qr" />
+        android:layout_marginTop="@dimen/dp_33"
+        android:progressDrawable="@drawable/progressbar_qr"
+        app:layout_constraintEnd_toEndOf="@+id/view34"
+        app:layout_constraintStart_toStartOf="@+id/view34"
+        app:layout_constraintTop_toBottomOf="@+id/imageView19" />
 
     <TextView
         android:id="@+id/task_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_20"
         android:text="@string/download_progress"
-        android:textColor="@color/white"
-        android:textSize="@dimen/sp_18" />
+        android:textColor="@color/color_00EEFF"
+        android:textSize="@dimen/sp_18"
+        android:layout_marginTop="@dimen/dp_17"
+        app:layout_constraintEnd_toEndOf="@+id/view34"
+        app:layout_constraintStart_toStartOf="@+id/view34"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
 
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
