--- a/app/src/main/res/layout/fragment_start_explantion.xml
+++ b/app/src/main/res/layout/fragment_start_explantion.xml
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitXY"
+            android:background="@drawable/img_strat_explation"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
