1、轻应用 2、讲解模块弹窗、急停、暂停、百度语音、MP3讲解中的业务交互优化 3、横竖切换AndroidManifest属性添加

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -726,5 +726,14 @@
         android:name="com.sendi.deliveredrobot.view.fragment.ConversationFragment"
         android:label="fragment_conversation"
         tools:layout="@layout/fragment_conversation" />
-
+    <fragment
+        android:id="@+id/appManagerFragment"
+        android:name="com.sendi.deliveredrobot.view.fragment.AppManagerFragment"
+        android:label="fragment_app_manager"
+        tools:layout="@layout/fragment_app_manager" />
+    <fragment
+        android:id="@+id/appContentFragment"
+        android:name="com.sendi.deliveredrobot.view.fragment.AppContentFragment"
+        android:label="fragment_app_content"
+        tools:layout="@layout/fragment_app_content" />
 </navigation>
