1、删除gradle、assets等文件中的人脸库文件 2、添加人脸信息录入功能 3、人脸识别、人脸检测功能重购

--- a/app/src/main/res/layout/activity_camera_preview.xml
+++ b/app/src/main/res/layout/activity_camera_preview.xml
@@ -124,7 +124,7 @@
 
                 <com.sendi.deliveredrobot.view.fragment.MySurfaceView
                     android:id="@+id/sv_camera_face"
-                    android:layout_width="750dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
