--- a/app/src/main/res/layout/dialog_wifi_password.xml
+++ b/app/src/main/res/layout/dialog_wifi_password.xml
@@ -10,7 +10,7 @@
     <View
         android:id="@+id/view17"
         android:layout_width="640dp"
-        android:layout_height="302.8dp"
+        android:layout_height="402.8dp"
         android:background="@drawable/setting_item_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,11 +19,12 @@
 
     <TextView
         android:id="@+id/textViewTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:gravity="center"
         android:layout_height="wrap_content"
         android:layout_marginBottom="472dp"
         android:textColor="@color/color_4D6FBE"
-        android:layout_marginTop="@dimen/dp_32"
+        android:layout_marginTop="@dimen/dp_52"
         android:textSize="@dimen/small_small_text_size"
         app:layout_constraintEnd_toEndOf="@+id/view17"
         app:layout_constraintStart_toStartOf="@+id/view17"
@@ -42,7 +43,7 @@
         android:inputType="textPassword"
         android:paddingStart="21dp"
         android:singleLine="true"
-        android:layout_marginTop="@dimen/dp_32"
+        android:layout_marginTop="@dimen/dp_62"
         android:textColorHint="@color/color_A0BAEF"
         android:textSize="@dimen/small_small_text_size"
         app:layout_constraintEnd_toEndOf="@+id/view17"
@@ -59,7 +60,7 @@
         android:text="@string/join"
         android:textColor="@color/white"
         android:textSize="@dimen/mid_text_size"
-        android:layout_marginTop="@dimen/dp_24"
+        android:layout_marginTop="@dimen/dp_42"
         app:layout_constraintEnd_toEndOf="@+id/view17"
         app:layout_constraintStart_toStartOf="@+id/view17"
         app:layout_constraintTop_toBottomOf="@+id/editTextWifiPassword"
