--- a/app/src/main/res/layout/dialog_wifi_password.xml
+++ b/app/src/main/res/layout/dialog_wifi_password.xml
@@ -35,7 +35,6 @@
         android:id="@+id/editTextWifiPassword"
         android:layout_width="560dp"
         android:layout_height="80dp"
-        android:layout_marginBottom="360dp"
         android:autofillHints="@string/please_input_password_chinese"
         android:background="@drawable/selector_edt_bg"
         android:hint="@string/please_input_password_chinese"
@@ -43,12 +42,12 @@
         android:inputType="textPassword"
         android:paddingStart="21dp"
         android:singleLine="true"
-        android:layout_marginTop="@dimen/dp_62"
         android:textColorHint="@color/color_A0BAEF"
         android:textSize="@dimen/small_small_text_size"
+        android:layout_marginTop="@dimen/dp_170"
         app:layout_constraintEnd_toEndOf="@+id/view17"
         app:layout_constraintStart_toStartOf="@+id/view17"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
+        app:layout_constraintTop_toTopOf="@+id/view17" />
 
 
     <TextView
