--- a/app/src/main/res/layout/fragment_wifi_setting.xml
+++ b/app/src/main/res/layout/fragment_wifi_setting.xml
@@ -60,7 +60,7 @@
                         android:layout_marginTop="37dp"
                         android:includeFontPadding="false"
                         android:text="@string/wifi_open"
-                        android:textColor="@color/color_A0BAEF"
+                        android:textColor="@color/B3_white"
                         android:textSize="@dimen/small_small_text_size" />
 
                 </FrameLayout>
@@ -94,7 +94,7 @@
                         android:layout_marginStart="0dp"
                         android:layout_marginEnd="132dp"
                         android:includeFontPadding="false"
-                        android:textColor="@color/color_6787D4"
+                        android:textColor="@color/B3_white"
                         android:textSize="@dimen/small_small_text_size" />
 
                     <TextView
@@ -104,7 +104,7 @@
                         android:layout_marginStart="48dp"
                         android:layout_marginTop="37dp"
                         android:includeFontPadding="false"
-                        android:textColor="@color/color_A0BAEF"
+                        android:textColor="@color/B3_white"
                         android:textSize="@dimen/small_small_text_size" />
                 </FrameLayout>
 
