--- a/app/src/main/res/layout/dialog_robot_self_check_hint.xml
+++ b/app/src/main/res/layout/dialog_robot_self_check_hint.xml
@@ -45,9 +45,10 @@
         app:layout_constraintTop_toTopOf="@+id/textViewDate" />
     <TextView
         android:id="@+id/title_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:gravity="center"
         android:includeFontPadding="false"
         android:text="@string/i_just_distracted_2"
         android:textColor="@color/white"
