1、修改README文件 2、修改数据库的表名 3、添加迎宾数据接收存储 4、优化百度TTS长文字朗读 5、修改导购模块sql查询错误的问题 6、添加迎宾页面、修改人脸识别/检测方法以及播报语

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,7 +23,7 @@
             android:layout_marginTop="17dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView59" />
+            app:layout_constraintTop_toBottomOf="@+id/slogan_name" />
 
         <ImageView
             android:id="@+id/imageViewSetting"
@@ -46,7 +46,7 @@
             app:layout_constraintTop_toTopOf="@+id/imageViewSetting" />
 
         <TextView
-            android:id="@+id/textView59"
+            android:id="@+id/slogan_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_140"
